--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ a {
     min-width: 169px;
     border: none;
     border-radius: 4px;
-    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .button-index {
@@ -191,7 +191,7 @@ a {
 .link {
     text-decoration: none;
     display: inline-block;
-    /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .pointer {
@@ -200,7 +200,7 @@ a {
 
 .address {
     font-style: normal;
-    /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* druga sekcja 'Solutions' */
@@ -289,7 +289,7 @@ który ustawia szerokość elementu na 100% szerokości kontenera rodzicielskieg
     display: flex;
     align-items: center;
     justify-content: center;
-    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .socials-link:hover {
     background-color: var(--ocean-color);
@@ -353,8 +353,7 @@ który ustawia szerokość elementu na 100% szerokości kontenera rodzicielskieg
     color: var(--light-slate-color);
     border: 1px solid var(--light-slate-color);
     border-radius: 4px;
-    /* transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -466,7 +465,7 @@ służący do pionowego wyrównania nawigacji i kontaktów */
 .link-active {
     position: relative;
     color: var(--ocean-color);
-    /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Wewnątrz znacznika address znajduje się lista,
 dla której przypisane są klasy */
@@ -770,7 +769,7 @@ który ustawia wyrównanie elementów w kierunku poprzecznym wzdłuż głównej 
     display: flex;
     align-items: center;
     justify-content: center;
-    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-socials-link:hover,
 .footer-socials-link:focus {
@@ -846,3 +845,43 @@ który jest utworzony za pomocą znacznika div*/
     margin-bottom: 8px;
 }
 
+
+/* ========= START BACKDROP ========== */
+
+/* Otwieranie/zamykanie okna modalnego Okno modalne z formularzem zgłoszeniowym otwiera się po kliknięciu na przycisk "Zamów usługę" . Aby skrypt działał,
+musisz dodać specjalne atrybuty do znaczników HTML,po których skrypt wyszukuje elementy: data-modal-open - do przycisku otwierania okna modalnego. data-modal-close - do przycisku zamykania okna modalnego. data-modal - do backdrop okna modalnego.*/
+.backdrop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.modal {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 528%;
+    min-height: 581px;
+    background-color: var(--white-color);
+}
+.close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 30px;
+    height: 30px;
+    background-color: var(--white-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+/* ============= END BACKDROP ============ */
