--- a/css/styles.css
+++ b/css/styles.css
@@ -914,30 +914,8 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .img-transition::after {
-    content:"14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App";
-    position: absolute;
-    background-color: var(--iris-color);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    bottom: -100%;
-    transition: transform 2s ease-in-out;
-    opacity: 0.5;
-} */
-
-.img-transition:hover::after {
-    transform: translateY(0%);
-}
-.img-transition:focus::after {
-    transform: translateY(0%);
-}
-
-.img-trans-container {
-    position: relative;
-    overflow: hidden;
-}
-.img-trans-text {
+.img-transition::after {
+    content: "14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App";
     position: absolute;
     top: 0;
     font-size: 16px;
@@ -951,8 +929,16 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/* <li class="list-link-buttons"><a class="image link image-link" href=""><img class="img" src="./images/img_9.jpg" alt="bank app" width="360" height="300"> */
+.img-transition:hover::after {
+    transform: translateY(0%);
+}
+.img-transition:focus::after {
+    transform: translateY(0%);
+}
+.img-trans-container {
+    position: relative;
+    overflow: hidden;
+}
 
 
 
