--- a/css/styles.css
+++ b/css/styles.css
@@ -816,8 +816,9 @@ który służy do określenia odstępu od listy */
 }
 /* Dla pierwszego punktu listy w klasie ustawiony jest styl width: calc((100% - 48px) / 3);służący do określenia szerokości punktu listy (odejmujemy sumę odstępów między punktami od całkowitej szerokości ekranu i dzielimy to przez liczbę punktów listy w jednym wierszu) */
 .list-link-buttons {
-    width: calc((100% - 48px)/3);
+    width: calc((100% - 48px) / 3);
     display: block;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Przy najechaniu na link, zastosowany do niego zostaje styl box-shadow o wartości 0px 1px 6px rgba(46, 47, 66, 0.08),0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);służący do określenia cienia dla elementu przy najechaniu myszą */
@@ -843,6 +844,11 @@ który jest utworzony za pomocą znacznika div*/
 /* Dla nagłówka w klasie ustawiony jest styl margin-bottom: 8px,który służy do określenia odstępu między akapitem a nagłówkiem */
 .header-list {
     margin-bottom: 8px;
+}
+
+.list-link-buttons:hover .overlay-text,
+.list-link-buttons:focus .overlay-text {
+    transform: translateY(0%);
 }
 
 
@@ -935,10 +941,23 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
 .img-transition:focus::after {
     transform: translateY(0%);
 }
-.img-trans-container {
+.img-trans-box {
     position: relative;
     overflow: hidden;
 }
 
-
+.overlay-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--cloud-color);
+    padding: 40px 32px;
+    background-color: var(--iris-color);
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
