--- a/css/styles.css
+++ b/css/styles.css
@@ -920,7 +920,7 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.img-transition::after {
+/* .img-transition::after {
     content: "14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App";
     position: absolute;
     top: 0;
@@ -934,7 +934,7 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     height: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 .img-transition:hover::after {
     transform: translateY(0%);
 }
