--- a/css/styles.css
+++ b/css/styles.css
@@ -865,7 +865,7 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     width: 100%;
     height: 100%;
     background-color: rgba(46,47,66,0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
     position: absolute;
@@ -893,7 +893,20 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.close-btn:hover {
+    background-color: #404bbf;
+    border: none;
+    background-color: #404bbf;
+}
+.close-btn:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+
 
 .is-hidden {
     opacity: 0;
@@ -920,21 +933,15 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .img-transition::after {
-    content: "14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App";
+.img-transition::after {
+    /* content: "14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App"; */
     position: absolute;
-    top: 0;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: var(--cloud-color);
-    padding: 40px 32px;
-    background-color: var(--iris-color);
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
 .img-transition:hover::after {
     transform: translateY(0%);
 }
@@ -961,3 +968,7 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.svg-four {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: var(--white-color)
+}
