--- a/css/styles.css
+++ b/css/styles.css
@@ -865,6 +865,7 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     width: 100%;
     height: 100%;
     background-color: rgba(46,47,66,0.4);
+    opacity: 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
@@ -906,8 +907,6 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     border: none;
 }
 
-
-
 .is-hidden {
     opacity: 0;
     visibility: hidden;
@@ -933,8 +932,8 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.img-transition::after {
-    /* content: "14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App"; */
+.link-active::after{
+    content:"";
     position: absolute;
     left: 0;
     bottom: -1px;
@@ -942,6 +941,16 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     background-color: #404bbf;
     border-radius: 2px;
 }
+/* .img-transition::after {
+    content: "14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+} */
+
 /* .img-transition:hover::after {
     transform: translateY(0%);
 }
@@ -976,4 +985,8 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
 .svg-four {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: var(--white-color)
+}
+
+.list-link-buttons {
+    box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
