--- a/css/styles.css
+++ b/css/styles.css
@@ -865,8 +865,7 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     width: 100%;
     height: 100%;
     background-color: rgba(46,47,66,0.4);
-    opacity: 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
     position: absolute;
