--- a/css/styles.css
+++ b/css/styles.css
@@ -915,21 +915,19 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
 
 /* Portfolio przyciski */
 .buttons {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1) background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
   /* Karta transition dla Portfolio*/
 .img-transition {
     width: 360px;
-    height: 300px;
-    background-color: var(--iris-color);
     border:none;
     color: var(--cloud-color);
     font-size: 32px;
     position: relative;
     overflow: hidden;
-    box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 .link-active::after{
     content:"";
@@ -983,7 +981,10 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
 
 .svg-four {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: var(--white-color)
+    fill: var(--grey-color)
+}
+.svg-four:hover {
+    fill: var(--white-color);
 }
 
 .list-link-buttons {
