--- a/css/styles.css
+++ b/css/styles.css
@@ -900,6 +900,7 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
     background-color: #404bbf;
     border: none;
     background-color: #404bbf;
+    fill:var(--white-color)
 }
 .close-btn:focus {
     background-color: #404bbf;
@@ -981,12 +982,11 @@ który unieruchamia element na stronie i nie pozwala mu przesuwać się względe
 
 .svg-four {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: var(--grey-color)
 }
-.svg-four:hover,
+/* .svg-four:hover,
 .svg-four:focus {
     fill: var(--white-color);
-}
+} */
 
 .list-link-buttons {
     box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
